--- a/index.html
+++ b/index.html
@@ -1,2 +1,85 @@
-<h>TestH</h>
-<p>test p</p>
+<html>
+    <head>
+        <link rel="stylesheet" href="style.css">
+        <title>
+            Liam Cribbs
+        </title>
+        <meta name="description" content="Liam Cribbs' Portfolio">
+        <meta name="keywords" content="Liam Cribbs">
+        <meta name="author" content="Liam Cribbs">
+    </head>
+
+    <body>
+        <header>
+            <div class="nav">
+                <div></div>
+                <nav class="mainNav" id="alignCenter">
+                    <ul>
+                        <a>
+                            <li class="button">
+                                Home
+                            </li>
+                        </a>
+                        <a>
+                            <li class="button">
+                                Games
+                            </li>
+                        </a>
+                        <a>
+                            <li class="button">
+                                3D Animation
+                            </li>
+                        </a>
+                        <a>
+                            <li class="button">
+                                UI
+                            </li>
+                        </a>
+                    </ul>
+                </nav>
+                
+                <nav class="mainNav" id="alignRight">
+                    <ul>
+                        <a>
+                            <li class="button">
+                                About
+                            </li>
+                        </a>
+                        <a href="resume.html">
+                            <li class="button">
+                                Resume
+                            </li>
+                        </a>
+                    </ul>
+                </nav>
+            </div>
+
+            <section class="center">
+                <h1 id="topSpace">Stanlaker Gorbonule</h1>
+                <h6 id="subHeading">Game Designer / Programmer</h6>
+            </section>
+
+        </header>
+
+        <main>
+            <section>
+                <article>
+                    <div class="gallery">
+                        <div>
+                            <img src="img/FISHGUN.gif">
+                        </div>
+                        <div">
+                            <img src="img/FISHGUN.gif">
+                        </div>
+                        <div>
+                            <img src="img/FISHGUN.gif">
+                        </div>
+                    </div>
+                </article>
+            </section>
+        </main>
+
+        <footer>
+        </footer>
+    </body>
+</html>
