--- a/index.html
+++ b/index.html
@@ -65,15 +65,20 @@
             <section>
                 <article>
                     <div class="gallery">
-                        <div>
-                            <img src="img/FISHGUN.gif">
-                        </div>
-                        <div">
-                            <img src="img/FISHGUN.gif">
-                        </div>
-                        <div>
-                            <img src="img/FISHGUN.gif">
-                        </div>
+                        <line>
+                            <div>
+                                <img src="img/FISHGUN.gif">
+                                <h3 class="link">FISHGUN</h3>
+                            </div>
+                            <div>
+                                <img src="img/Passport.gif">
+                                <h3 class="link">A Human Visits an Alien Planet and Promptly Loses Their Passport</h3>
+                            </div>
+                            <div>
+                                <img src="img/SkySailors.png">
+                                <h3 class="link">Sky Sailors</h3>
+                            </div>
+                        </line>
                     </div>
                 </article>
             </section>
