--- a/index.html
+++ b/index.html
@@ -68,6 +68,9 @@
                         <line>
                             <div>
                                 <img src="img/FISHGUN.gif">
+                                <div class="hoverInfo">
+                                    <p>A chaotic fish-person shooter in which you murder hordes of fruit with your sentient fishgun</p>
+                                </div>
                                 <h3 class="link">FISHGUN</h3>
                             </div>
                             <div>
