--- a/index.html
+++ b/index.html
@@ -75,10 +75,16 @@
                             </div>
                             <div>
                                 <img src="img/Passport.gif">
+                                <div class="hoverInfo">
+                                    <p>A chaotic fish-person shooter in which you murder hordes of fruit with your sentient fishgun</p>
+                                </div>
                                 <h3 class="link">A Human Visits an Alien Planet and Promptly Loses Their Passport</h3>
                             </div>
                             <div>
                                 <img src="img/SkySailors.png">
+                                <div class="hoverInfo">
+                                    <p>A chaotic fish-person shooter in which you murder hordes of fruit with your sentient fishgun</p>
+                                </div>
                                 <h3 class="link">Sky Sailors</h3>
                             </div>
                         </line>
