--- a/resume.html
+++ b/resume.html
@@ -10,53 +10,56 @@
     </head>
 
     <body>
-        <header>
-            <div class="nav">
-                <div></div>
-                <nav class="mainNav" id="alignCenter">
-                    <ul>
-                        <a>
-                            <li class="button">
-                                Home
-                            </li>
-                        </a>
-                        <a>
-                            <li class="button">
-                                Games
-                            </li>
-                        </a>
-                        <a>
-                            <li class="button">
-                                3D Animation
-                            </li>
-                        </a>
-                        <a>
-                            <li class="button">
-                                UI
-                            </li>
-                        </a>
-                    </ul>
-                </nav>
-                
-                <nav class="mainNav" id="alignRight">
-                    <ul>
-                        <a>
-                            <li class="button">
-                                About
-                            </li>
-                        </a>
-                        <a href="resume.html">
-                            <li class="button">
-                                Resume
-                            </li>
-                        </a>
-                    </ul>
-                </nav>
-            </div>
-        </header>
+        <div class="nav">
+            <div></div>
+            <nav class="alignCenter mainNav">
+                <ul>
+                    <a href="#top">
+                        <li class="button">
+                            Home
+                        </li>
+                    </a>
+                    <a href="#games">
+                        <li class="button">
+                            Games
+                        </li>
+                    </a>
+                    <a>
+                        <li class="button">
+                            Tech Art
+                        </li>
+                    </a>
+                    <a>
+                        <li class="button">
+                            3D Animation
+                        </li>
+                    </a>
+                    <a>
+                        <li class="button">
+                            UI
+                        </li>
+                    </a>
+                </ul>
+            </nav>
+            
+            <nav class="alignRight mainNav">
+                <ul>
+                    <a>
+                        <li class="button">
+                            About
+                        </li>
+                    </a>
+                    <a href="resume.html">
+                        <li class="button">
+                            Resume
+                        </li>
+                    </a>
+                </ul>
+            </nav>
+        </div>
 
         <main>
-            <embed src="Resume.pdf" width="100%" height="100%" />
+            <embed src="Resume.pdf" style="margin:auto; margin-top: 100px; width:100%; height: 2000;"/>
         </main>
 
         <footer>
