--- a/index.html
+++ b/index.html
@@ -10,83 +10,125 @@
     </head>
 
     <body>
-        <header>
-            <div class="nav">
-                <div></div>
-                <nav class="mainNav" id="alignCenter">
-                    <ul>
-                        <a>
-                            <li class="button">
-                                Home
-                            </li>
-                        </a>
-                        <a>
-                            <li class="button">
-                                Games
-                            </li>
-                        </a>
-                        <a>
-                            <li class="button">
-                                3D Animation
-                            </li>
-                        </a>
-                        <a>
-                            <li class="button">
-                                UI
-                            </li>
-                        </a>
-                    </ul>
-                </nav>
-                
-                <nav class="mainNav" id="alignRight">
-                    <ul>
-                        <a>
-                            <li class="button">
-                                About
-                            </li>
-                        </a>
-                        <a href="resume.html">
-                            <li class="button">
-                                Resume
-                            </li>
-                        </a>
-                    </ul>
-                </nav>
-            </div>
+        <div class="nav">
+            <div></div>
+            <nav class="alignCenter mainNav">
+                <ul>
+                    <a href="#top">
+                        <li class="button">
+                            Home
+                        </li>
+                    </a>
+                    <a href="#games">
+                        <li class="button">
+                            Games
+                        </li>
+                    </a>
+                    <a>
+                        <li class="button">
+                            Tech Art
+                        </li>
+                    </a>
+                    <a>
+                        <li class="button">
+                            3D Animation
+                        </li>
+                    </a>
+                    <a>
+                        <li class="button">
+                            UI
+                        </li>
+                    </a>
+                </ul>
+            </nav>
+            
+            <nav class="alignRight mainNav">
+                <ul>
+                    <a>
+                        <li class="button">
+                            About
+                        </li>
+                    </a>
+                    <a href="resume.html">
+                        <li class="button">
+                            Resume
+                        </li>
+                    </a>
+                </ul>
+            </nav>
+        </div>
 
+        <header>
             <section class="center">
                 <h1 id="topSpace">Stanlaker Gorbonule</h1>
                 <h6 id="subHeading">Game Designer / Programmer</h6>
             </section>
-
         </header>
 
         <main>
             <section>
+                <div class="alignCenter" id="games" style="padding-top:50px;">
+                    <h2>Games</h2>
+                </div>
                 <article>
                     <div class="gallery">
                         <line>
-                            <div>
-                                <img src="img/FISHGUN.gif">
-                                <div class="hoverInfo">
-                                    <p>A chaotic fish-person shooter in which you murder hordes of fruit with your sentient fishgun</p>
+                            <a href="fishgun.html">
+                                <div>
+                                    <img src="img/FISHGUN.gif" alt="FISHGUN">
+                                    <div class="hoverInfo">
+                                        <p>A chaotic fish-person shooter in which you murder hordes of fruit with your sentient fish gun</p>
+                                    </div>
+                                    <h3 class="link">FISHGUN</h3>
                                 </div>
-                                <h3 class="link">FISHGUN</h3>
-                            </div>
-                            <div>
-                                <img src="img/Passport.gif">
-                                <div class="hoverInfo">
-                                    <p>A chaotic fish-person shooter in which you murder hordes of fruit with your sentient fishgun</p>
+                            </a>
+                            <a href="passport.html">
+                                <div>
+                                    <img src="img/Passport.gif" alt="A Human Visits an Alien Planet and Promptly Loses Their Passport">
+                                    <div class="hoverInfo">
+                                        <p>A 'narrative' game where you talk to the inhabitants of an alien city as you attempt to replace your shredded passport</p>
+                                    </div>
+                                    <h3 class="link">A Human Visits an Alien Planet and Promptly Loses Their Passport</h3>
                                 </div>
-                                <h3 class="link">A Human Visits an Alien Planet and Promptly Loses Their Passport</h3>
-                            </div>
-                            <div>
-                                <img src="img/SkySailors.png">
-                                <div class="hoverInfo">
-                                    <p>A chaotic fish-person shooter in which you murder hordes of fruit with your sentient fishgun</p>
+                            </a>
+                            <a href="skysailors.html">
+                                <div>
+                                    <img srcset="img/SkySailors.png, img/SkySailorsSmall.png 0.5x" src="img/SkySailors.png" width="340" height="340" alt="Sky Sailors">
+                                    <div class="hoverInfo">
+                                        <p>A physics-based building exploration game where you build airships to a world of floating islands and alien ruins</p>
+                                    </div>
+                                    <h3 class="link">Sky Sailors</h3>
                                 </div>
-                                <h3 class="link">Sky Sailors</h3>
-                            </div>
+                            </a>
+                        </line>
+                        <line>
+                            <a href="rocksandstocks.html">
+                                <div>
+                                    <img src="img/RocksAndStocks.gif" width="340" height="340" alt="Rocks and Stocks">
+                                    <div class="hoverInfo">
+                                        <p>An online co-op asteroid mining simulator with a dangerously volatile economy</p>
+                                    </div>
+                                    <h3 class="link">Rocks and Stocks</h3>
+                                </div>
+                            </a>
+                            <a href="alienvirus.html">
+                                <div>
+                                    <img srcset="img/AlienVirusSpace.png, img/AlienVirusSpaceSmall.png 0.5x" src="img/AlienVirusSpace.png" width="340" height="340" alt="The Alien Virus Space Game">
+                                    <div class="hoverInfo">
+                                        <p>Fly a physics-based spaceship between planets while avoiding asteroids and black holes</p>
+                                    </div>
+                                    <h3 class="link">The Alien Virus Space Game</h3>
+                                </div>
+                            </a>
+                            <a href="prototypes.html">
+                                <div>
+                                    <img src="img/Terminal.gif" width="340" height="340" alt="Prototypes">
+                                    <div class="hoverInfo">
+                                        <p>A collection of small game prototypes</p>
+                                    </div>
+                                    <h3 class="link">Prototypes</h3>
+                                </div>
+                            </a>
                         </line>
                     </div>
                 </article>
@@ -94,6 +136,9 @@
         </main>
 
         <footer>
+            <div class="center" style="margin-top:100px; margin-bottom:10px; display:inline-block;">
+                <a href="about.html" style="margin-left:100px;"><p class="link">Contact</p></a>
+            </div>
         </footer>
     </body>
 </html>
