--- a/fishgun.html
+++ b/fishgun.html
@@ -59,11 +59,12 @@
         </div>
 
         <header class="imgHeader">
-            <bkg style="background-image: url('img/FISHGUNCover.jpg');"></bkg>
+            <bkg style="background-image: url('img/FISHGUNCover.jpg');">
             <section class="center headerSection">
-                <h1 id="topSpace">FISHGUN</h1>
+                <h1>FISHGUN</h1>
                 <h6 id="subHeading">2023</h6>
             </section>
+            </bkg>
         </header>
 
         <main>
