--- a/fishgun.html
+++ b/fishgun.html
@@ -91,7 +91,7 @@
                         One of our main goals was to create fluid player movement that could serve as a base for chaotic abilities and gameplay. I spent a lot of time programming the player controller and tweaking values (so many values!) to make it feel great. A large part of this was adding camera movement to the player's actions, like jumping, sliding, and headbob while running.
                     </p>
 
-                    <iframe frameborder="0" class="center" style="margin-top:40px" src="https://itch.io/embed/1981555?bg_color=242424&amp;fg_color=C1FF3B&amp;link_color=CC6CF5&amp;border_color=242424" width="552" height="167"><a href="https://liamcribbs.itch.io/fishgun">FISHGUN by Liam Cribbs</a></iframe>
+                    <iframe frameborder="0" class="center itchWidget" style="margin-top:40px" src="https://itch.io/embed/1981555?bg_color=242424&amp;fg_color=C1FF3B&amp;link_color=CC6CF5&amp;border_color=242424"><a href="https://liamcribbs.itch.io/fishgun">FISHGUN by Liam Cribbs</a></iframe>
 
                     <div class="ytContainer" style="margin-top:40px">
                         <iframe src="https://www.youtube.com/embed/IEQfd67Txj8" allowfullscreen></iframe>
