--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
         <title>
             Liam Cribbs
         </title>
@@ -58,12 +59,36 @@
             </nav>
         </div>
 
-        <div>
+        <div class="hamMenu">
+            <a href="javascript:void(0)" onclick="myFunction()">
+                <span class="link material-symbols-outlined" style="padding-left:5px; padding-right:5px; font-size: 50px;">
+                    menu
+                </span>
+            </a>
             <div id="toggleMenu">
-                <p>hi there</p>
-                <p>hehe</p>
+                <a>
+                    <h3 class="link">Home</h3>
+                </a>
+                <a>
+                    <h3 class="link">Games</h3>
+                </a>
+                <a>
+                    <h3 class="link">Tech Art</h3>
+                </a>
+                <a>
+                    <h3 class="link">3D Animation</h3>
+                </a>
+                <a>
+                    <h3 class="link">UI</h3>
+                </a>
+                <div style="margin: 60px 0px;"></div>
+                <a>
+                    <h3 class="link">About</h3>
+                </a>
+                <a>
+                    <h3 class="link">Resume</h3>
+                </a>
             </div>
-            <a href="javascript:void(0)" onclick="myFunction()">CLICKME</a>
         </div>
 
         <header>
