--- a/fishgun.html
+++ b/fishgun.html
@@ -1,6 +1,8 @@
 <html>
     <head>
         <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+        <script src="script.js"></script>
         <title>
             Liam Cribbs
         </title>
@@ -14,27 +16,27 @@
             <div></div>
             <nav class="alignCenter mainNav">
                 <ul>
-                    <a href="#top">
+                    <a href="index.html">
                         <li class="button">
                             Home
                         </li>
                     </a>
-                    <a href="#games">
+                    <a href="index.html#games">
                         <li class="button">
                             Games
                         </li>
                     </a>
-                    <a>
+                    <a href="techart.html">
                         <li class="button">
                             Tech Art
                         </li>
                     </a>
-                    <a>
+                    <a href="animation.html">
                         <li class="button">
                             3D Animation
                         </li>
                     </a>
-                    <a>
+                    <a href="ui.html">
                         <li class="button">
                             UI
                         </li>
@@ -44,7 +46,7 @@
             
             <nav class="alignRight mainNav">
                 <ul>
-                    <a>
+                    <a href="about.html">
                         <li class="button">
                             About
                         </li>
@@ -56,6 +58,38 @@
                     </a>
                 </ul>
             </nav>
+        </div>
+
+        <div class="hamMenu">
+            <a href="javascript:void(0)" onclick="toggleHam()">
+                <span class="link material-symbols-outlined" id="hamButton" style="padding-left:5px; padding-right:5px; font-size: 50px;">
+                    menu
+                </span>
+            </a>
+            <div id="toggleMenu">
+                <a href="index.html">
+                    <h3 class="link">Home</h3>
+                </a>
+                <a href="index.html#games">
+                    <h3 class="link">Games</h3>
+                </a>
+                <a href="techart.html">
+                    <h3 class="link">Tech Art</h3>
+                </a>
+                <a href="animation.html">
+                    <h3 class="link">3D Animation</h3>
+                </a>
+                <a href="ui.html">
+                    <h3 class="link">UI</h3>
+                </a>
+                <div style="margin: 60px 0px;"></div>
+                <a href="about.html">
+                    <h3 class="link">About</h3>
+                </a>
+                <a href="resume.html">
+                    <h3 class="link">Resume</h3>
+                </a>
+            </div>
         </div>
         
         <header class="imgHeader">
