--- a/skysailors.html
+++ b/skysailors.html
@@ -93,10 +93,10 @@
         </div>
         
         <header class="imgHeader">
-            <bkg style="background-image: url('img/PassportCover.jpg');">
+            <bkg style="background-image: url('img/SkySailorsCover.png');">
             <section class="center headerSection">
-                <h1>A Human Visits an Alien Planet and Promptly Loses Their Passport</h1>
-                <h6 id="subHeading">2021</h6>
+                <h1 style="color: rgb(239, 239, 239)">Sky Sailors</h1>
+                <!-- <h6 id="subHeading">In Development</h6> -->
             </section>
             </bkg>
         </header>
@@ -106,26 +106,25 @@
                 <article class="content">
                     <h5>Roles</h5>
                     <p>
-                        Everything
+                        Design, Programming, UI, 3D Animation, Narrative, Music
                     </p>
 
                     <h5>Team</h5>
                     <p>
-                        Solo
+                        3-Person Team
                     </p>
 
                     <h5>Description</h5>
                     <p>
-                        A short narrative game I made over the course of a few weeks. You explore an alien city and talk to its inhabitants as you attempt to replace your shredded passport.
+                        Sky Sailors is a physics-based building exploration game. Build modular airships and explore floating islands and alien ruins, unlocking new ship techs as you go.
                     </p>
                     <p>
-                        I created a simple dialogue system for this project, as well as custom post-processing shaders for the pixelation and chromatic aberration effects.
+                        The game takes place in a procedurally generated world of floating islands and rocks. Players fly between islands, harvesting resources to build up their ship. As they explore, players will discover new plants, creatures, and alien technology.
                     </p>
-
-                    <iframe frameborder="0" class="center itchWidget" style="margin-top:40px" src="https://itch.io/embed/1232947?bg_color=faf6d6&amp;link_color=855bfa" width="552" height="167"><a href="https://liamcribbs.itch.io/ahumanvisitsanalienplanetandpromptlylosestheirpassport">A Human Visits an Alien Planet and Promptly Loses Their Passport by Liam Cribbs</a></iframe>
-
+                    
                     <div class="ytContainer" style="margin-top:40px">
-                        <iframe src="https://www.youtube.com/embed/5TD2McOzoU4" allowfullscreen></iframe>
+                        <iframe src="https://www.youtube.com/embed/M3vEdZsv51w" allowfullscreen></iframe>
+                        <iframe src="https://www.youtube.com/embed/8cHKWAFgzVA" allowfullscreen></iframe>
                     </div>
                 </article>
             </section>
