--- a/skysailors.html
+++ b/skysailors.html
@@ -93,7 +93,7 @@
         </div>
         
         <header class="imgHeader">
-            <bkg style="background-image: url('img/SkySailorsCover.png');">
+            <bkg style="background-image: url('img/skysailors/SkySailorsCover.png');">
             <section class="center headerSection">
                 <h1 style="color: rgb(239, 239, 239)">Sky Sailors</h1>
                 <!-- <h6 id="subHeading">In Development</h6> -->
@@ -124,9 +124,17 @@
                     
                     <div class="ytContainer" style="margin-top:40px">
                         <iframe src="https://www.youtube.com/embed/M3vEdZsv51w" allowfullscreen></iframe>
+                    </div>
+                    <div class="ytContainer" style="margin-top:40px">
                         <iframe src="https://www.youtube.com/embed/8cHKWAFgzVA" allowfullscreen></iframe>
                     </div>
                 </article>
+
+                <div class="simpleGallery">
+                    <img srcset="img/skysailors/SkySailors1.jpg, img/skysailors/SkySailors1Small.jpg, 0.5x" src="img/skysailors/SkySailors1.jpg" width="1280" height="720">
+                    <img srcset="img/skysailors/SkySailors2.jpg, img/skysailors/SkySailors2Small.jpg, 0.5x" src="img/skysailors/SkySailors2.jpg" width="1280" height="720">
+                    <img srcset="img/skysailors/SkySailors3.jpg, img/skysailors/SkySailors3Small.jpg, 0.5x" src="img/skysailors/SkySailors3.jpg" width="1280" height="720">
+                </div>
             </section>
         </main>
 
