--- a/rocksandstocks.html
+++ b/rocksandstocks.html
@@ -93,8 +93,10 @@
         </div>
         
         <header class="imgHeader">
-            <bkg style="background-image: url('img/rocksandstocks/RocksAndStocksCover.jpg'); background-size: contain;">
+            <bkg style="background-image: url('img/rocksandstocks/GrabberArm.gif');">
             <section class="center headerSection">
+                <h1 style="color: rgb(239, 239, 239)">Rocks and Stocks</h1>
+                <h6 id="subHeading" style="color: rgb(239, 239, 239)">2022</h6>
             </section>
             </bkg>
         </header>
@@ -104,23 +106,23 @@
                 <article class="content">
                     <h5>Roles</h5>
                     <p>
-                        Gameplay Design, Programming, 3D Animation
+                        Design, Programming, UI, Sound Design
                     </p>
 
                     <h5>Team</h5>
                     <p>
-                        8-Person Team
+                        2-Person Team
                     </p>
 
                     <h5>Description</h5>
                     <p>
-                        FISHGUN is a chaotic fish-person shooter in which you feed your fish gun random upgrades to defeat hordes of fruit.
+                        Rocks and Stocks is an online co-op asteroid mining simulator with a dangerously volatile economy. Players pilot their spaceship through asteroid fields and harvest rocks with a grabber arm, then return to a space station and sell them before running out of oxygen. Players can also invest their hard earned money into stocks of various companies - hopefully keeping enough money to refill their oxygen supply.
                     </p>
                     <p>
-                        Players pick up upgrades that change how the gun shoot. Some apply effects to the bullets, like making them explode or bounce. Others completely change how/what the gun shoots, such as the railgun and laser. Eating upgrades to apply them to the fishgun is the only way to heal, so players often must choose between gaining health and keeping a good combination of effects.
+                        This was my first game with online multiplayer. I gained a lot of experience with online networking code and steam/discord integration
                     </p>
                     <p>
-                        One of our main goals was to create fluid player movement that could serve as a base for chaotic abilities and gameplay. I spent a lot of time programming the player controller and tweaking values (so many values!) to make it feel great. A large part of this was adding camera movement to the player's actions, like jumping, sliding, and headbob while running.
+                        The UI was a large focus for me. I wanted to have more fun interactions than just clicking buttons. Most of the interactable UI elements are sliders or spinners. For example, players control the ship's thrust with a slider to increase or decrease its speed, and the reactor is cooled by spinning a fan in circles. Even the main menu is navigated with a slider!
                     </p>
 
                     <iframe frameborder="0" class="center itchWidget" style="margin-top:40px" src="https://itch.io/embed/1981555?bg_color=242424&amp;fg_color=C1FF3B&amp;link_color=CC6CF5&amp;border_color=242424"><a href="https://liamcribbs.itch.io/fishgun">FISHGUN by Liam Cribbs</a></iframe>
