--- a/rocksandstocks.html
+++ b/rocksandstocks.html
@@ -124,13 +124,14 @@
                     <p>
                         The UI was a large focus for me. I wanted to have more fun interactions than just clicking buttons. Most of the interactable UI elements are sliders or spinners. For example, players control the ship's thrust with a slider to increase or decrease its speed, and the reactor is cooled by spinning a fan in circles. Even the main menu is navigated with a slider!
                     </p>
-
-                    <iframe frameborder="0" class="center itchWidget" style="margin-top:40px" src="https://itch.io/embed/1981555?bg_color=242424&amp;fg_color=C1FF3B&amp;link_color=CC6CF5&amp;border_color=242424"><a href="https://liamcribbs.itch.io/fishgun">FISHGUN by Liam Cribbs</a></iframe>
-
-                    <div class="ytContainer" style="margin-top:40px">
-                        <iframe src="https://www.youtube.com/embed/IEQfd67Txj8" allowfullscreen></iframe>
-                    </div>
                 </article>
+
+                <div class="simpleGallery">
+                    <img src="img/rocksandstocks/ReactorCooling.gif" width="1280" height="720">
+                    <img src="img/rocksandstocks/AsteroidProcessing.gif" width="1280" height="720">
+                    <img src="img/rocksandstocks/FlyingShip.gif" width="1280" height="720">
+                    <img src="img/rocksandstocks/StockTrading.gif" width="1280" height="720">
+                </div>
             </section>
         </main>
 
