--- a/resume.html
+++ b/resume.html
@@ -24,17 +24,17 @@
                             Games
                         </li>
                     </a>
-                    <a>
+                    <a href="techart.html">
                         <li class="button">
                             Tech Art
                         </li>
                     </a>
-                    <a>
+                    <a href="animation.html">
                         <li class="button">
                             3D Animation
                         </li>
                     </a>
-                    <a>
+                    <a href="ui.html">
                         <li class="button">
                             UI
                         </li>
@@ -44,7 +44,7 @@
             
             <nav class="alignRight mainNav">
                 <ul>
-                    <a>
+                    <a href="about.html">
                         <li class="button">
                             About
                         </li>
@@ -56,6 +56,38 @@
                     </a>
                 </ul>
             </nav>
+        </div>
+
+        <div class="hamMenu">
+            <a href="javascript:void(0)" onclick="toggleHam()">
+                <span class="link material-symbols-outlined" id="hamButton" style="padding-left:5px; padding-right:5px; font-size: 50px;">
+                    menu
+                </span>
+            </a>
+            <div id="toggleMenu">
+                <a href="#top">
+                    <h3 class="link">Home</h3>
+                </a>
+                <a href="#games">
+                    <h3 class="link">Games</h3>
+                </a>
+                <a href="techart.html">
+                    <h3 class="link">Tech Art</h3>
+                </a>
+                <a href="animation.html">
+                    <h3 class="link">3D Animation</h3>
+                </a>
+                <a href="ui.html">
+                    <h3 class="link">UI</h3>
+                </a>
+                <div style="margin: 60px 0px;"></div>
+                <a href="about.html">
+                    <h3 class="link">About</h3>
+                </a>
+                <a href="resume.html">
+                    <h3 class="link">Resume</h3>
+                </a>
+            </div>
         </div>
 
         <main>
