--- a/resume.html
+++ b/resume.html
@@ -14,12 +14,12 @@
             <div></div>
             <nav class="alignCenter mainNav">
                 <ul>
-                    <a href="#top">
+                    <a href="index.html">
                         <li class="button">
                             Home
                         </li>
                     </a>
-                    <a href="#games">
+                    <a href="index.html#games">
                         <li class="button">
                             Games
                         </li>
@@ -37,6 +37,11 @@
                     <a href="ui.html">
                         <li class="button">
                             UI
+                        </li>
+                    </a>
+                    <a href="music.html">
+                        <li class="button">
+                            Music
                         </li>
                     </a>
                 </ul>
@@ -65,10 +70,10 @@
                 </span>
             </a>
             <div id="toggleMenu">
-                <a href="#top">
+                <a href="index.html">
                     <h3 class="link">Home</h3>
                 </a>
-                <a href="#games">
+                <a href="index.html#games">
                     <h3 class="link">Games</h3>
                 </a>
                 <a href="techart.html">
@@ -79,6 +84,9 @@
                 </a>
                 <a href="ui.html">
                     <h3 class="link">UI</h3>
+                </a>
+                <a href="music.html">
+                    <h3 class="link">Music</h3>
                 </a>
                 <div style="margin: 60px 0px;"></div>
                 <a href="about.html">
