--- a/techart.html
+++ b/techart.html
@@ -41,6 +41,11 @@
                             UI
                         </li>
                     </a>
+                    <a href="music.html">
+                        <li class="button">
+                            Music
+                        </li>
+                    </a>
                 </ul>
             </nav>
             
@@ -81,6 +86,9 @@
                 </a>
                 <a href="ui.html">
                     <h3 class="link">UI</h3>
+                </a>
+                <a href="music.html">
+                    <h3 class="link">Music</h3>
                 </a>
                 <div style="margin: 60px 0px;"></div>
                 <a href="about.html">
